--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </style>
     
 
-    <title>No Limit Romania</title>
+    <title>Tempton Romania</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </head>
